--- a/changelog.txt
+++ b/changelog.txt
@@ -7,8 +7,14 @@ General Adjustments
 - Added "death item" sprites for Tongue Grapple and Soul Drain.
 - Changed the descriptions for Tongue Grapple and Soul Drain to be less memey.
 - Improved method of restoring correct character sprites upon Dorky or Tainted Dorky reviving as another vanilla character.
-- Collecting a Blended Heart as Dorky now respect mods that resprite it
-- Fix bugs with gaining more Birthrights as Dorky and code not working with the increased paddle count
+- Collecting a Blended Heart as Dorky now respect mods that resprite it.
+- Fix bugs with gaining more Birthrights as Dorky and code not working with the increased paddle count.
+
+Gameplay Adjustments
+- Soul Drain's spike no longer deals damage on initial contact with an enemy.
+- Progress on Soul Drain's Black Heart bar is now saved when exiting and continuing the run. Because I am lazy, it will only save whole numbers and not decimals.
+- All damage dealt by the player now contributes to Soul Drain's bar, but to a much lesser extent, and is capped. Damage dealt by the Soul Drain spike is 1:1.
+- You can disconnect the Soul Drain spike from an enemy manually by using Soul Drain again while its uncharged.
 
 Mod Support
 - Added EID support! Descriptions available for Dorky, his Tainted form, their birthrights, and pocket actives. Supports English and Spanish.
