--- a/changelog.txt
+++ b/changelog.txt
@@ -2,23 +2,26 @@ v1.2
 Didn't expect an update for this mod, huh?
 
 General Adjustments
-- Complete overhaul of the codebase. Primarily just a lot better to look at.
-- Added HudHelper for use with Tainted Dorky's "Soul Drain Bar" for more accurate and dynamic positioning.
-- Added "death item" sprites for Tongue Grapple and Soul Drain.
-- Changed the descriptions for Tongue Grapple and Soul Drain to be less memey.
-- Improved method of restoring correct character sprites upon Dorky or Tainted Dorky reviving as another vanilla character.
-- Collecting a Blended Heart as Dorky now respect mods that resprite it.
-- Fix bugs with gaining more Birthrights as Dorky and code not working with the increased paddle count.
+- Complete overhaul of the codebase. Primarily just a lot better to look at
+- Added HudHelper for use with Tainted Dorky's "Soul Drain Bar" for more accurate and dynamic positioning
+- Added "death item" sprites for Tongue Grapple and Soul Drain
+- Changed the descriptions for Tongue Grapple and Soul Drain to be less memey
+- Improved method of restoring correct character sprites upon Dorky or Tainted Dorky reviving as another vanilla character
+- Collecting a Blended Heart as Dorky now respect mods that resprite it
+- Fix bugs with gaining more Birthrights as Dorky and code not working with the increased paddle count
+- Soul Drain's Black Heart bar no longer flashes when it is filled and no longer displays above "Strawman-like" copies of The Void
 
 Gameplay Adjustments
-- Soul Drain's spike no longer deals damage on initial contact with an enemy.
-- Progress on Soul Drain's Black Heart bar is now saved when exiting and continuing the run. Because I am lazy, it will only save whole numbers and not decimals.
-- All damage dealt by the player now contributes to Soul Drain's bar, but to a much lesser extent, and is capped. Damage dealt by the Soul Drain spike is 1:1.
-- You can disconnect the Soul Drain spike from an enemy manually by using Soul Drain again while its uncharged.
+- Soul Drain's spike no longer deals damage on initial contact with an enemy
+- Progress on Soul Drain's Black Heart bar is now saved when exiting and continuing the run. Because I am lazy, it will only save whole numbers and not decimals
+- All damage dealt by the player now contributes to Soul Drain's Black Heart bar, but to a much lesser extent, and is capped per instance of damage. Damage dealt by the Soul Drain spike is 1:1
+- You can disconnect the Soul Drain spike from an enemy manually by using Soul Drain again while its uncharged
+- Soul Drain's spike will automatically detatch if the enemy is too far away from the player on top of being outside of the room
+- Soul Drain now has support for being used in other active slots, used indirectly by other means such as ? Card, and by players other than Tainted Dorky
 
 Mod Support
-- Added EID support! Descriptions available for Dorky, his Tainted form, their birthrights, and pocket actives. Supports English and Spanish.
+- Added EID support! Descriptions available for Dorky, his Tainted form, their birthrights, and pocket actives. Supports English and Spanish
 - Added POG costume for Tainted Dorky
 
 API
-- There really isn't an API, but the mod now has a "DorkyMod" global and exposes most of the functions and enumerations available in the mod. No mod will ever interact with this mod, but it's there, lol.
+- There really isn't an API, but the mod now has a "DorkyMod" global and exposes most of the functions and enumerations available in the mod. No mod will ever interact with this mod, but it's there, lol
